syntax = "proto3";
option java_generic_services = true;

option java_package = "org.marketcetera.rpc.base";
option java_outer_classname = "BaseRpc";

message KeyValuePair {
    string key = 1;
    string value = 2;
}

message Map {
    repeated KeyValuePair keyValuePairs = 1;
}

message Qty {
    int64 qty = 1;
    int32 scale = 2;
}

message Object {
    bytes data = 1;
}

message LoginRequest {
    string appId = 1;
    string clientId = 2;
    Locale locale = 3;
    string versionId = 4;
    string username = 5;
    string password = 6;
}

message LoginResponse {
    string sessionId = 1;
}

message LogoutRequest {
    string sessionId = 1;
}

message LogoutResponse {
}

message Locale {
    string country = 1;
    string language = 2;
    string variant = 3;
}

message HeartbeatRequest {
    string sessionId = 1;
}

message HeartbeatResponse {
    string sessionId = 1;
    int64 timestamp = 2;
}

service BaseRpcService {
    rpc login(LoginRequest) returns (LoginResponse);
    rpc logout(LogoutRequest) returns (LogoutResponse);
    rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}
